Regression: attached Vector Rotate nodes detach #91661

Closed
opened 2021-09-24 03:56:14 +02:00 by David Black · 7 comments

System Information
Linux Mint 20.2 Cinnamon
3400G

Blender Version
Broken:
blender-3.0.0-alpha+master.26141664f0c4-linux.x86_64-release.tar.xz
Screenshot from 2021-09-24 02-44-42.png

Worked:
blender-2.93.4-linux-x64 (official release)
Screenshot from 2021-09-24 02-42-53.png
blender-3.0.0-alpha+cycles-x.342cdb03ee06-linux.x86_64-release.tar.xz
Screenshot from 2021-09-24 02-44-10.png

Short description of error
Previously attached Vector Rotate nodes detach when opened in the latest Blender version.

Exact steps for others to reproduce the error
Compare the following .blend file in 2.93.4 and in the most recent 3.0.0 alpha version.
Vector Rotate nodes detach.blend

Possibly connected with this commit? c99cb81452

In case helpful, from tests, all other Vector nodes remain attached, appears only the Vector Rotate node is affected.

**System Information** Linux Mint 20.2 Cinnamon 3400G **Blender Version** Broken: blender-3.0.0-alpha+master.26141664f0c4-linux.x86_64-release.tar.xz ![Screenshot from 2021-09-24 02-44-42.png](https://archive.blender.org/developer/F10565501/Screenshot_from_2021-09-24_02-44-42.png) Worked: blender-2.93.4-linux-x64 (official release) ![Screenshot from 2021-09-24 02-42-53.png](https://archive.blender.org/developer/F10565491/Screenshot_from_2021-09-24_02-42-53.png) blender-3.0.0-alpha+cycles-x.342cdb03ee06-linux.x86_64-release.tar.xz ![Screenshot from 2021-09-24 02-44-10.png](https://archive.blender.org/developer/F10565497/Screenshot_from_2021-09-24_02-44-10.png) **Short description of error** Previously attached Vector Rotate nodes detach when opened in the latest Blender version. **Exact steps for others to reproduce the error** Compare the following .blend file in 2.93.4 and in the most recent 3.0.0 alpha version. [Vector Rotate nodes detach.blend](https://archive.blender.org/developer/F10565421/Vector_Rotate_nodes_detach.blend) Possibly connected with this commit? c99cb81452 In case helpful, from tests, all other Vector nodes remain attached, appears only the Vector Rotate node is affected.
Author

Added subscriber: @david_black

Added subscriber: @david_black
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Hans Goudey self-assigned this 2021-09-24 06:54:05 +02:00
Member

Thanks for the report! Fix incoming

Thanks for the report! Fix incoming

This issue was referenced by 0f764ade1a

This issue was referenced by 0f764ade1a2fd8aa9c462dd5850e8be52aa203f5
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Author

Thank you for your impressively quick fix!

Thank you for your impressively quick fix!
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#91661
No description provided.