Fix T91661: Vector rotate output socket diconnects on file load

An incorrect name was used in the socket declaration refactor.